--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,6 +12,9 @@ include_directories(${Boost_INCLUDE_DIRS})
 find_package(GSL REQUIRED COMPONENTS)
 include_directories(${GSL_INCLUDE_DIR})
 
+find_package(YAMLCpp REQUIRED COMPONENTS)
+include_directories(${YAMLCPP_INCLUDE_DIR})
+
 ############################################
 
 include_directories(BEFORE ${CMAKE_SOURCE_DIR})
@@ -19,12 +22,12 @@ include_directories(BEFORE ${CMAKE_SOURCE_DIR})
 set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O3 -g -DNDEBUG")
 set(CMAKE_CXX_FLAGS "-Wall -Wno-sign-compare -std=c++11 ${SDL_CFLAGS}")
 
-file(GLOB_RECURSE Sources morph/*.cpp)
+file(GLOB_RECURSE Sources morphc/*.cpp)
 add_executable(morph ${Sources})
 
 target_link_libraries(morph
 	${GSL_LIBRARIES}
 	${Boost_LIBRARIES}
+	${YAMLCPP_LIBRARY}
     ${LIBS})
-
 
