--- a/config.yaml
+++ b/config.yaml
@@ -6,8 +6,9 @@ species_data_path: /home/limyreth/doc/internship/data  # if provided, all paths 
 species:
     - name: Arabidopsis  # unique identifier (string)
       data_path: ARABIDOBSIS
-      example_goi: [AT5G17230, AT4G14210, AT1G10830, AT3G04870, AT1G06820, AT3G10230, AT5G57030, AT4G25700, AT5G52570, AT1G31800, AT3G53130, AT5G67030, AT1G08550]  # Example GOI to show in GUIs as placeholder
+      example_goi: ['AT5G17230', 'AT4G14210', 'AT1G10830', 'AT3G04870', 'AT1G06820', 'AT3G10230', 'AT5G57030', 'AT4G25700', 'AT5G52570', 'AT1G31800', 'AT3G53130', 'AT5G67030', 'AT1G08550']  # Example GOI to show in GUIs as placeholder
       gene_descriptions: gene_descriptions  # tab separated file mapping gene to gene-description
+      gene_web_page: 'http://www.arabidopsis.org/servlets/TairObject?name=$name&type=locus'  # url to page of gene, use $name as placeholder for the gene name
       expression_matrices:
           - name: 'Seed_GH'
             path: data_sets/Seed_GH_DataSet.txt
@@ -44,6 +45,7 @@ species:
       data_path: ITAG
       example_goi: ['Sotub02g020720.1.1', 'Sotub02g020710.1.1', 'Sotub02g020130.1.1', 'Sotub07g023520.1.1', 'Sotub02g010840.1.1', 'Sotub11g008880.1.1', 'Sotub10g009720.1.1', 'Sotub05g026310.1.1', 'Sotub04g021880.1.1', 'Sotub07g025180.1.1', 'Sotub09g027860.1.1']
       gene_descriptions: gene_descriptions
+      gene_web_page: 'http://bioinformatics.psb.ugent.be/orcae/annotation/Soltu/current/$name'
       genes_of_interest:
           - name: goi1
             path: gois/ITAG.txt
@@ -96,6 +98,7 @@ species:
       data_path: PGSC
       example_goi: ['PGSC0003DMP400048099', 'PGSC0003DMP400033460', 'PGSC0003DMP400041818', 'PGSC0003DMP400023691', 'PGSC0003DMP400019953', 'PGSC0003DMP400039420', 'PGSC0003DMP400020813', 'PGSC0003DMP400027608', 'PGSC0003DMP400029983', 'PGSC0003DMP400010972', 'PGSC0003DMP400065555', 'PGSC0003DMP400023982', 'PGSC0003DMP400033908', 'PGSC0003DMP400020829']
       gene_descriptions: gene_descriptions
+      gene_web_page: 'http://potato.plantbiology.msu.edu/cgi-bin/annotation_report.cgi?gene_id=$name'
       expression_matrices:
           - name: 'All tissues'
             path: data_sets/All_TissuesDataSet_PGSC.txt
@@ -145,6 +148,7 @@ species:
       data_path: TOMATO
       example_goi: ['Solyc10g084400', 'Solyc09g074850', 'Solyc09g011630', 'Solyc09g011540', 'Solyc09g011520', 'Solyc09g011510', 'Solyc09g007150', 'Solyc08g080910', 'Solyc08g080900', 'Solyc07g056500', 'Solyc07g056490', 'Solyc07g056480', 'Solyc07g056440', 'Solyc07g056420', 'Solyc06g009040', 'Solyc06g009020', 'Solyc05g006750', 'Solyc05g006740', 'Solyc02g081430', 'Solyc02g081340', 'Solyc02g068900', 'Solyc01g091330', 'Solyc01g086680', 'Solyc01g081310']
       gene_descriptions: gene_descriptions
+      gene_web_page: 'http://solgenomics.net/search/locus_search.pl?w8e4_any_name_matchtype=exactly&w8e4_any_name=$name&w8e4_common_name=&w8e4_phenotype=&w8e4_locus_linkage_group=&w8e4_ontology_term=&w8e4_editor=&w8e4_genbank_accession='
       expression_matrices:
           - name: 'Root and leaf'
             path: data_sets/RootAndLeafDataSet.txt
