Serialize to/from binary
This was to speed up file reading, which turns out to be negligible anyway when calculating with large GOIs (e.g. 0.12% of runtime when using a GOI of 200 genes)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../cmake_modules)
 ############################################
 # find dependencies
 
-find_package(Boost REQUIRED COMPONENTS filesystem iostreams system)
+find_package(Boost REQUIRED COMPONENTS filesystem iostreams system serialization)
 include_directories(${Boost_INCLUDE_DIRS})
 
 find_package(GSL REQUIRED COMPONENTS)
