--- a/debug_config.yaml
+++ b/debug_config.yaml
@@ -10,6 +10,7 @@ species:
       example_goi: ['AT5G17230', 'AT4G14210', 'AT1G10830', 'AT3G04870', 'AT1G06820', 'AT3G10230', 'AT5G57030', 'AT4G25700', 'AT5G52570', 'AT1G31800', 'AT3G53130', 'AT5G67030', 'AT1G08550']  # Example GOI to show in GUIs as placeholder
       gene_descriptions: gene_descriptions  # tab separated file mapping gene to gene-description
       gene_web_page: 'http://www.arabidopsis.org/servlets/TairObject?name=$name&type=locus'  # url to page of gene, use $name as placeholder for the gene name
+      gene_pattern: 'AT[0-9]G[0-9]{5}'  # regex pattern (perl syntax) that all valid genes should match, match is case-insensitive. http://www.boost.org/doc/libs/1_57_0/libs/regex/doc/html/boost_regex/syntax/perl_syntax.html
       expression_matrices:
           - name: 'Seed_GH'
             path: data_sets/Seed_GH_DataSet.txt
@@ -47,6 +48,7 @@ species:
       example_goi: ['Sotub02g020720.1.1', 'Sotub02g020710.1.1', 'Sotub02g020130.1.1', 'Sotub07g023520.1.1', 'Sotub02g010840.1.1', 'Sotub11g008880.1.1', 'Sotub10g009720.1.1', 'Sotub05g026310.1.1', 'Sotub04g021880.1.1', 'Sotub07g025180.1.1', 'Sotub09g027860.1.1']
       gene_descriptions: gene_descriptions
       gene_web_page: 'http://bioinformatics.psb.ugent.be/orcae/annotation/Soltu/current/$name'
+      gene_pattern: 'Sotub[0-9]{2}g[0-9]{5}[.][0-9][.][0-9]'
       genes_of_interest:
           - name: goi1
             path: gois/ITAG.txt
@@ -100,6 +102,7 @@ species:
       example_goi: ['PGSC0003DMP400048099', 'PGSC0003DMP400033460', 'PGSC0003DMP400041818', 'PGSC0003DMP400023691', 'PGSC0003DMP400019953', 'PGSC0003DMP400039420', 'PGSC0003DMP400020813', 'PGSC0003DMP400027608', 'PGSC0003DMP400029983', 'PGSC0003DMP400010972', 'PGSC0003DMP400065555', 'PGSC0003DMP400023982', 'PGSC0003DMP400033908', 'PGSC0003DMP400020829']
       gene_descriptions: gene_descriptions
       gene_web_page: 'http://potato.plantbiology.msu.edu/cgi-bin/annotation_report.cgi?gene_id=$name'
+      gene_pattern: 'PGSC[0-9]{4}DMP[0-9]{9}'
       expression_matrices:
           - name: 'All tissues'
             path: data_sets/All_TissuesDataSet_PGSC.txt
@@ -150,6 +153,7 @@ species:
       example_goi: ['Solyc10g084400', 'Solyc09g074850', 'Solyc09g011630', 'Solyc09g011540', 'Solyc09g011520', 'Solyc09g011510', 'Solyc09g007150', 'Solyc08g080910', 'Solyc08g080900', 'Solyc07g056500', 'Solyc07g056490', 'Solyc07g056480', 'Solyc07g056440', 'Solyc07g056420', 'Solyc06g009040', 'Solyc06g009020', 'Solyc05g006750', 'Solyc05g006740', 'Solyc02g081430', 'Solyc02g081340', 'Solyc02g068900', 'Solyc01g091330', 'Solyc01g086680', 'Solyc01g081310']
       gene_descriptions: gene_descriptions
       gene_web_page: 'http://solgenomics.net/search/locus_search.pl?w8e4_any_name_matchtype=exactly&w8e4_any_name=$name&w8e4_common_name=&w8e4_phenotype=&w8e4_locus_linkage_group=&w8e4_ontology_term=&w8e4_editor=&w8e4_genbank_accession='
+      gene_pattern: 'Solyc[0-9]{2}g[0-9]{5}'
       expression_matrices:
           - name: 'Root and leaf'
             path: data_sets/RootAndLeafDataSet.txt
@@ -187,6 +191,7 @@ species:
       gene_descriptions: gene_descriptions  # tab separated file mapping gene to gene-description
       gene_web_page: 'http://rapdb.dna.affrc.go.jp/viewer/gbrowse_details/irgsp1?name=$name;feature_id=2503361'
       gene_mapping: msu_to_rap.mapping
+      gene_pattern: 'Os[0-9]{2}g[0-9]{7}|LOC_Os[0-9]{2}g[0-9]{5}([.][0-9])?'
       expression_matrices:
           - name: 'E-GEOD-14275'
             path: 'data_sets/E-GEOD-14275.expression_matrix'
