--- a/debug_config.yaml
+++ b/debug_config.yaml
@@ -153,7 +153,7 @@ species:
       example_goi: ['Solyc10g084400', 'Solyc09g074850', 'Solyc09g011630', 'Solyc09g011540', 'Solyc09g011520', 'Solyc09g011510', 'Solyc09g007150', 'Solyc08g080910', 'Solyc08g080900', 'Solyc07g056500', 'Solyc07g056490', 'Solyc07g056480', 'Solyc07g056440', 'Solyc07g056420', 'Solyc06g009040', 'Solyc06g009020', 'Solyc05g006750', 'Solyc05g006740', 'Solyc02g081430', 'Solyc02g081340', 'Solyc02g068900', 'Solyc01g091330', 'Solyc01g086680', 'Solyc01g081310']
       gene_descriptions: gene_descriptions
       gene_web_page: 'http://solgenomics.net/search/locus_search.pl?w8e4_any_name_matchtype=exactly&w8e4_any_name=$name&w8e4_common_name=&w8e4_phenotype=&w8e4_locus_linkage_group=&w8e4_ontology_term=&w8e4_editor=&w8e4_genbank_accession='
-      gene_pattern: 'Solyc[0-9]{2}g[0-9]{5}'
+      gene_pattern: 'Solyc[0-9]{2}g[0-9]{6}'
       expression_matrices:
           - name: 'Root and leaf'
             path: data_sets/RootAndLeafDataSet.txt
@@ -191,7 +191,7 @@ species:
       gene_descriptions: gene_descriptions  # tab separated file mapping gene to gene-description
       gene_web_page: 'http://rapdb.dna.affrc.go.jp/viewer/gbrowse_details/irgsp1?name=$name;feature_id=2503361'
       gene_mapping: msu_to_rap.mapping
-      gene_pattern: 'Os[0-9]{2}g[0-9]{7}|LOC_Os[0-9]{2}g[0-9]{5}([.][0-9])?'
+      gene_pattern: 'Os[0-9]{2}g[0-9]{7}|LOC_Os[0-9]{2}g[0-9]{5}([.][0-9]+)?|.*[.]fgenesh[.]mrna[.][0-9]+'
       expression_matrices:
           - name: 'E-GEOD-14275'
             path: 'data_sets/E-GEOD-14275.expression_matrix'
