Added concept of a Database; lots of other changes...
Put everything in DEEP_BLUE_GENOME namespace.
Split Species into common and morph::Species.
Split Clustering into Clustering and GeneExpressionMatrixClustering.
renamed GeneExpression -> GeneExpressionMatrix.
Gene mapping and descriptions have binary cache representation too now.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,7 +20,7 @@ include_directories(${YAMLCPP_INCLUDE_DIR})
 include_directories(BEFORE ${CMAKE_SOURCE_DIR})
 
 set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O3 -g -DNDEBUG")
-set(CMAKE_CXX_FLAGS "-Wall -Wno-sign-compare -std=c++11 ${SDL_CFLAGS}")
+set(CMAKE_CXX_FLAGS "-Wall -Wno-sign-compare -std=c++11 ${SDL_CFLAGS}") # TODO consider turning on sign-compare again
 
 # common.so 
 file(GLOB_RECURSE common_sources deep_blue_genome/common/*.cpp)
