database cli links

--- a/debug_config.yaml
+++ b/debug_config.yaml
@@ -340,3 +340,9 @@ clusterings:
     - name: 'IsEnzyme'
       expression_matrix: 'RiceGenomeDataSet'
       path: 'rice/clusterings/is_enzyme.clustering'
+
+# Orthologs
+# Plain text files where each line is a group of orthologs.
+# You're allowed to specify a gene on multiple lines, as long as the corresponding groups are equal (same set of genes)
+orthologs:
+    - '/mnt/midas/group/biocomp/projects/morph/coexpr/data/plaza_source/plaza_orthologs'
