--- a/debug_config.yaml
+++ b/debug_config.yaml
@@ -13,47 +13,63 @@ gene_collections:
       species: Arabidopsis
       example_goi: ['AT5G17230', 'AT4G14210', 'AT1G10830', 'AT3G04870', 'AT1G06820', 'AT3G10230', 'AT5G57030', 'AT4G25700', 'AT5G52570', 'AT1G31800', 'AT3G53130', 'AT5G67030', 'AT1G08550']  # Example GOI to show in GUIs as placeholder
       gene_web_page: 'http://www.arabidopsis.org/servlets/TairObject?name=$name&type=locus'  # url to page of gene, use $name as placeholder for the gene name
-      gene_format_match: 'AT([0-9])G([0-9]{5})'  # Genes are part of the gene collection iff they match this regex pattern (perl syntax, case-insensitive). http://www.boost.org/doc/libs/1_57_0/libs/regex/doc/html/boost_regex/syntax/perl_syntax.html
-      gene_format_replace: 'AT$1G$2'  # As a gene is read into the database, it will be formatted by s/gene_format_match/gene_format_replace/ using boost-extended format string syntax (http://www.boost.org/doc/libs/1_33_1/libs/regex/doc/format_boost_syntax.html)
+      gene_parser:  # description of how to parse genes of this collection into (gene-id, splice variant)
+          # You can specify multiple match, replace (see rice below)
+          - match: 'AT([0-9])G([0-9]{5})'  # Genes are part of the gene collection iff they match this regex pattern (perl syntax, case-insensitive). http://www.boost.org/doc/libs/1_57_0/libs/regex/doc/html/boost_regex/syntax/perl_syntax.html
+            replace: 'AT$1G$2'  # As a gene is read into the database, it will be formatted by s/gene_format_match/gene_format_replace/ using boost-extended format string syntax. This results in just the gene name, no splice variant suffix. (http://www.boost.org/doc/libs/1_33_1/libs/regex/doc/format_boost_syntax.html)
+            splice_variant_group: null  # Number of subgroup (1-based) in match which contains the splice variant number
 
     - name: 'Potato - ITAG'
       species: Potato
       example_goi: ['Sotub02g020720.1.1', 'Sotub02g020710.1.1', 'Sotub02g020130.1.1', 'Sotub07g023520.1.1', 'Sotub02g010840.1.1', 'Sotub11g008880.1.1', 'Sotub10g009720.1.1', 'Sotub05g026310.1.1', 'Sotub04g021880.1.1', 'Sotub07g025180.1.1', 'Sotub09g027860.1.1']
       gene_web_page: 'http://bioinformatics.psb.ugent.be/orcae/annotation/Soltu/current/$name'
-      gene_format_match: 'Sotub([0-9]{2})g([0-9]{6})[.][0-9][.][0-9]' #TODO deal properly with .num suffixes
-      gene_format_replace: 'Sotub$1g$2'
+      gene_parser:
+          - match: 'Sotub([0-9]{2})g([0-9]{6})[.][0-9][.]([0-9])' #TODO deal properly with .num suffixes
+            replace: 'Sotub$1g$2'
+            splice_variant_group: 3
+            # TODO check we pick the correct .num group
 
     - name: 'Potato - PGSC'
       species: Potato
       example_goi: ['PGSC0003DMP400048099', 'PGSC0003DMP400033460', 'PGSC0003DMP400041818', 'PGSC0003DMP400023691', 'PGSC0003DMP400019953', 'PGSC0003DMP400039420', 'PGSC0003DMP400020813', 'PGSC0003DMP400027608', 'PGSC0003DMP400029983', 'PGSC0003DMP400010972', 'PGSC0003DMP400065555', 'PGSC0003DMP400023982', 'PGSC0003DMP400033908', 'PGSC0003DMP400020829']
       gene_web_page: 'http://potato.plantbiology.msu.edu/cgi-bin/annotation_report.cgi?gene_id=$name'
-      gene_format_match: 'PGSC([0-9]{4})DMP([0-9]{9})'
-      gene_format_replace: 'PGSC$1DMP$2'
+      gene_parser:
+          - match: 'PGSC([0-9]{4})DMP([0-9]{9})'
+            replace: 'PGSC$1DMP$2'
 
     - name: Tomato
       species: Tomato
       example_goi: ['Solyc10g084400', 'Solyc09g074850', 'Solyc09g011630', 'Solyc09g011540', 'Solyc09g011520', 'Solyc09g011510', 'Solyc09g007150', 'Solyc08g080910', 'Solyc08g080900', 'Solyc07g056500', 'Solyc07g056490', 'Solyc07g056480', 'Solyc07g056440', 'Solyc07g056420', 'Solyc06g009040', 'Solyc06g009020', 'Solyc05g006750', 'Solyc05g006740', 'Solyc02g081430', 'Solyc02g081340', 'Solyc02g068900', 'Solyc01g091330', 'Solyc01g086680', 'Solyc01g081310']
       gene_web_page: 'http://solgenomics.net/search/locus_search.pl?w8e4_any_name_matchtype=exactly&w8e4_any_name=$name&w8e4_common_name=&w8e4_phenotype=&w8e4_locus_linkage_group=&w8e4_ontology_term=&w8e4_editor=&w8e4_genbank_accession='
-      gene_format_match: 'Solyc([0-9]{2})g([0-9]{6})([.][0-9]+[.][0-9]+)?'
-      gene_format_replace: 'Solyc$1g$2'
+      gene_parser:
+          - match: 'Solyc([0-9]{2})g([0-9]{6})([.][0-9]+[.]([0-9]+))?'
+            replace: 'Solyc$1g$2'
+            splice_variant_group: 4
 
     - name: 'Rice - MSU'
       species: Rice
       #gene_web_page: TODO
-      gene_format_match: 'LOC_Os([0-9]{2})g([0-9]{5})([.][0-9]+)?|.*[.]fgenesh[.]mrna[.]()([0-9]+)' # TODO need multiple (match,replace) pairs
-      gene_format_replace: 'TODO$1g$2'
+      gene_parser:
+          - match: 'LOC_Os([0-9]{2})g([0-9]{5})([.]([0-9]+))?'
+            replace: 'LOC_Os$1g$2'
+            splice_variant_group: 4
+          - match: '(.*)[.]fgenesh[.]mrna[.]([0-9]+)'
+            replace: '$1.fgenesh.mrna'
+            splice_variant_group: 2
 
     - name: 'Rice - RAP'
       species: Rice
       example_goi: ['Os01g0323600', 'Os01g0719100', 'LOC_Os01g01030']
       gene_web_page: 'http://rapdb.dna.affrc.go.jp/viewer/gbrowse_details/irgsp1?name=$name;feature_id=2503361'
-      gene_format_match: 'Os([0-9]{2})g([0-9]{7})'
-      gene_format_replace: 'Os$1g$2'
+      gene_parser:
+          - match: 'Os([0-9]{2})g([0-9]{7})'
+            replace: 'Os$1g$2'
 
     - name: 'Apple'
       species: Apple
-      gene_format_match: 'MDP([0-9]{10})'
-      gene_format_replace: 'MDP$1'
+      gene_parser:
+          - match: 'MDP([0-9]{10})'
+            replace: 'MDP$1'
 
 # Functional annotations of genes
 # Tab separated files mapping gene to gene-description. (You can put multiple gene collections in the same file)
