Store data in a well-structured way, with good integrity, in memory
Replaces the ODB and mysql++ attempt. Also stores on disk, via boost serialization

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required (VERSION 2.8)
-project (morph)
+project (deep_blue_genome)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake_modules")
 
@@ -9,17 +9,12 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake_modules")
 find_package(Boost REQUIRED COMPONENTS filesystem iostreams system serialization regex program_options)
 include_directories(${Boost_INCLUDE_DIRS})
 
+# TODO still using gsl?
 find_package(GSL REQUIRED COMPONENTS)
 include_directories(${GSL_INCLUDE_DIR})
 
 find_package(YAMLCpp REQUIRED COMPONENTS)
 include_directories(${YAMLCPP_INCLUDE_DIR})
-
-set(PC_LIBODB_INCLUDE_DIRS "/usr/include/odb")
-set(PC_LIBODB_LIBRARY_DIRS "/usr/lib/odb")
-find_package(ODB REQUIRED COMPONENTS mysql)
-
-include(${ODB_USE_FILE})
 
 ############################################
 
@@ -31,25 +26,13 @@ set(CMAKE_CXX_FLAGS "-Wall -Wno-sign-compare -Wno-unknown-pragmas -std=c++11 ${S
 #############
 # common.so 
 file(GLOB_RECURSE common_sources deep_blue_genome/common/*.cpp)
-file(GLOB_RECURSE common_headers deep_blue_genome/common/*.h)
-
-# Note: compiles some headers into more C++ code; adds generated sources to common_sources
-get_property(include_dirs DIRECTORY PROPERTY INCLUDE_DIRECTORIES)
-odb_compile(common_sources FILES ${common_headers} INCLUDE ${include_dirs} DB mysql STANDARD c++11 SCHEMA_FORMAT sql GENERATE_SCHEMA GENERATE_QUERY GENERATE_SESSION GENERATE_PREPARED)
 	
 add_library(common SHARED ${common_sources})
-	
-target_include_directories(common
-	PRIVATE
-	${ODB_INCLUDE_DIRS}
-	${ODB_COMPILE_OUTPUT_DIR}
-)
 
 target_link_libraries(common
 	${GSL_LIBRARIES}
 	${Boost_LIBRARIES}
 	${YAMLCPP_LIBRARY}
-    ${ODB_LIBRARIES}
 )
 		
 #############
