--- a/debug_config.yaml
+++ b/debug_config.yaml
@@ -351,5 +351,9 @@ gene_mappings:
 # Plain text files where each line is a group of orthologs.
 # You're allowed to specify a gene on multiple lines, as long as the corresponding groups are equal (same set of genes)
 orthologs:
-    - '/mnt/midas/group/biocomp/projects/morph/coexpr/data/plaza_source/plaza_orthologs'
-    - '/mnt/midas/group/biocomp/projects/morph/coexpr/data/pgsc_itag/orthologs'
+    - name: 'Plaza Monocot'
+      path: '/mnt/midas/group/biocomp/projects/morph/coexpr/data/plaza_source/orthologs_monocot'
+    - name: 'Plaza Dicot'
+      path: '/mnt/midas/group/biocomp/projects/morph/coexpr/data/plaza_source/orthologs_dicot'
+    - name: 'PGSC - ITAG mapping'
+      path: '/mnt/midas/group/biocomp/projects/morph/coexpr/data/pgsc_itag/orthologs'
