Get morph working in master (still broken), ...
Sped up build with cotire.
Third party includes bundled together in stdafx.h (as their content 'never' changes)
No expression matrices or gene collections associated to clusterings.
No gene collection associated with expression matrices.
Removed SpliceVariant, explicitly only supporting Gene now.
Morph takes joblist as a single path to baits file or dir of baits files, not a yaml file.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,11 @@
 cmake_minimum_required (VERSION 2.8)
 project (deep_blue_genome)
 
+cmake_policy(SET CMP0058 NEW)  # suppresses a warning
+
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake_modules")
+
+include(cotire)  # Speeds up build process
 
 add_definitions(-DBOOST_RESULT_OF_USE_DECLTYPE) # Needed to build boost 1.57 on gcc 4.8
 
@@ -38,6 +42,9 @@ target_link_libraries(common
 	${YAMLCPP_LIBRARY}
 )
 
+set_target_properties(common PROPERTIES COTIRE_CXX_PREFIX_HEADER_INIT "deep_blue_genome/common/stdafx.h") # precompiled header file
+cotire(common)
+
 #############
 # database
 file(GLOB_RECURSE database_sources deep_blue_genome/database/*.cpp)
@@ -47,14 +54,20 @@ target_link_libraries(database
 	common
 )
 
+set_target_properties(database PROPERTIES COTIRE_CXX_PREFIX_HEADER_INIT "deep_blue_genome/database/stdafx.h") # precompiled header file
+cotire(database)
+
 #############
 # morph
-#file(GLOB_RECURSE morph_sources deep_blue_genome/morph/*.cpp)
-#add_executable(morph ${morph_sources})
+file(GLOB_RECURSE morph_sources deep_blue_genome/morph/*.cpp)
+add_executable(morph ${morph_sources})
 
-#target_link_libraries(morph
-#	common
-#)
+target_link_libraries(morph
+	common
+)
+
+set_target_properties(morph PROPERTIES COTIRE_CXX_PREFIX_HEADER_INIT "deep_blue_genome/morph/stdafx.h") # precompiled header file
+cotire(morph)
 
 #############
 # coexpr
@@ -65,6 +78,9 @@ target_link_libraries(coexpr
 	common
 )
 
+set_target_properties(coexpr PROPERTIES COTIRE_CXX_PREFIX_HEADER_INIT "deep_blue_genome/coexpr/stdafx.h") # precompiled header file
+cotire(coexpr)
+
 
 #############
 # ortholog_stats
@@ -74,3 +90,7 @@ add_executable(ortholog_stats ${ortholog_stats_sources})
 target_link_libraries(ortholog_stats
 	common
 )
+
+set_target_properties(ortholog_stats PROPERTIES COTIRE_CXX_PREFIX_HEADER_INIT "deep_blue_genome/ortholog_stats/stdafx.h") # precompiled header file
+cotire(ortholog_stats)
+
