Added first chunk of code for python version (in chaotic broken state)

--- a/.hgignore
+++ b/.hgignore
@@ -1,6 +1,10 @@
 syntax: regexp
 .*\.orig
 .*\.swp
-^\.project$
-^\.cproject$
+\.project$
+\.cproject$
 ^build$
+python3/test
+data
+.*\.pyc
+__pycache__
