Add database config, recreate(). Changed CLI doc format

--- a/.hgignore
+++ b/.hgignore
@@ -7,6 +7,7 @@ syntax: regexp
 python3/test/data
 python3/test/last_runs
 python3/venv
+python3/src/deep_blue_genome/deep_blue_genome.conf
 ^data
 .*\.pyc
 __pycache__
