--- a/python3/requirements.txt
+++ b/python3/requirements.txt
@@ -13,6 +13,7 @@ pkginfo==1.2.1
 plumbum==1.6.0
 psutil==3.3.0
 py==1.4.31
+PyMySQL==0.6.7
 pypandoc==1.1.2
 pyparsing==2.0.6
 pytest==2.8.4
@@ -21,8 +22,8 @@ pytz==2015.7
 pyxdg==0.25
 requests==2.8.1
 requests-toolbelt==0.5.0
-scipy==0.16.1
 scikit-learn==0.17
+scipy==0.16.1
 six==1.10.0
 SQLAlchemy==1.0.9
 twine==1.6.4
