--- a/python3/requirements.txt
+++ b/python3/requirements.txt
@@ -1,5 +1,5 @@
-numpy==1.10.1
 scipy==0.16.1
+numpy==1.10.1
 Bottleneck==1.0.0
 click==6.2
 cycler==0.9.0
@@ -17,6 +17,7 @@ pyparsing==2.0.6
 python-dateutil==2.4.2
 pytz==2015.7
 pyxdg==0.25
+requests==2.8.1
 scikit-learn==0.17
 six==1.10.0
 SQLAlchemy==1.0.9
