Move python3 to repo root

--- a/.hgignore
+++ b/.hgignore
@@ -3,11 +3,10 @@ syntax: regexp
 .*\.swp
 \.project$
 \.cproject$
-^build$
-python3/test/last_runs
-python3/venv
-python3/src/deep_blue_genome/main.conf
-python3/src/deep_blue_genome/cli.conf
+test/last_runs
+venv
+src/deep_blue_genome/main.conf
+src/deep_blue_genome/cli.conf
 ^data
 .*\.pyc
 __pycache__
