Update project structure

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,7 @@
 [pytest]
-addopts = --basetemp=test/last_runs
-testpaths=src/deep_blue_genome/test
+addopts = --basetemp=last_test_runs --maxfail=1
+testpaths = deep_blue_genome/test
+
+[metadata]
+description-file = README.md
+
