--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,34 @@
-scipy==0.16.1
-numpy==1.10.1
-Bottleneck==1.0.0
-click==6.2
-cycler==0.9.0
+numpy==1.10.4
+matplotlib==1.5.1
+scipy==0.17.0
+scikit-learn==0.17.1
+pandas==0.18.0
+numexpr==2.5
+bottleneck==1.0.0
+plumbum==1.6.1.post0
 inflection==0.3.1
-matplotlib==1.5.0
-memory-profiler==0.39
 more-itertools==2.2
-numexpr==2.4.6
-pandas==0.17.1
-plumbum==1.6.0
-psutil==3.3.0
-PyMySQL==0.6.7
-pypandoc==1.1.2
-pyparsing==2.0.6
-python-dateutil==2.4.2
-pytz==2015.7
+memory-profiler==0.41
+psutil==4.1.0
 pyxdg==0.25
-requests==2.8.1
-scikit-learn==0.17
-six==1.10.0
-SQLAlchemy==1.0.9
-wheel==0.26.0
+frozendict==0.5
+requests==2.9.1
+sqlalchemy==1.0.12
+pymysql==0.7.2
+pytest==2.9.0
+pytest-benchmark==3.0.0
+pytest-timeout==1.0.0
+pytest-xdist==1.14
+freezegun==0.3.6
+networkx==1.11
+decorator==4.0.9          # via networkx
+six==1.10.0               # via cycler, freezegun, python-dateutil
+cycler==0.10.0            # via matplotlib
+statistics==1.0.3.5       # via pytest-benchmark
+pyparsing==2.1.0          # via matplotlib
+py==1.4.31                # via pytest, pytest-xdist
+apipkg==1.4               # via execnet
+python-dateutil==2.5.0    # via freezegun, matplotlib, pandas
+execnet==1.4.1            # via pytest-xdist
+docutils==0.12            # via statistics
+pytz==2016.1              # via matplotlib, pandas
