--- a/requirements.txt
+++ b/requirements.txt
@@ -13,24 +13,37 @@ memory-profiler==0.41
 psutil==4.1.0
 pyxdg==0.25
 frozendict==0.5
+Sphinx==1.4.5             # via sphinx-rtd-theme
+numpydoc==0.6.0
+sphinx-rtd-theme==0.1.9
 requests==2.9.1
 sqlalchemy==1.0.12
 pymysql==0.7.2
 -e file:///home/limyreth/doc/eclipse_workspace/chicken_turtle_util
 pytest==2.9.0
+pytest-env==0.6.0
 pytest-benchmark==3.0.0
 pytest-timeout==1.0.0
 pytest-xdist==1.14
+pytest-cov==2.3.1
+coverage-pth==0.0.1
 freezegun==0.3.6
 networkx==1.11
+alabaster==0.7.9          # via sphinx
 apipkg==1.4               # via execnet
-decorator==4.0.9          # via networkx
-pytz==2016.1              # via matplotlib, pandas
-statistics==1.0.3.5       # via pytest-benchmark
-python-dateutil==2.5.0    # via freezegun, matplotlib, pandas
-six==1.10.0               # via cycler, freezegun, python-dateutil
-execnet==1.4.1            # via pytest-xdist
+babel==2.3.4              # via sphinx
+coverage==4.2             # via coverage-pth, pytest-cov
 cycler==0.10.0            # via matplotlib
+decorator==4.0.9          # via networkx
+docutils==0.12            # via sphinx
+execnet==1.4.1            # via pytest-xdist
+imagesize==0.7.1          # via sphinx
+Jinja2==2.8               # via sphinx
+MarkupSafe==0.23          # via jinja2
 py==1.4.31                # via pytest, pytest-xdist
+Pygments==2.1.3           # via sphinx
 pyparsing==2.1.0          # via matplotlib
-docutils==0.12            # via statistics
+python-dateutil==2.5.0    # via freezegun, matplotlib, pandas
+pytz==2016.1              # via babel, matplotlib, pandas
+six==1.10.0               # via cycler, freezegun, python-dateutil, sphinx
+snowballstemmer==1.2.1    # via sphinx
