--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 [pytest]
 addopts = --basetemp=last_test_runs --maxfail=1
-testpaths = deep_blue_genome/test
+testpaths = deep_genome/coexpnetviz/tests
+env = PYTHONHASHSEED=0
 
 [metadata]
 description-file = README.md
