Add: create_network (redo and test algorithm interface, using updated core)

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,5 +4,5 @@ testpaths = deep_genome/coexpnetviz/tests
 env = PYTHONHASHSEED=0
 
 [metadata]
-description-file = README.md
+description-file = README.rst
 
