--- a/requirements.in
+++ b/requirements.in
@@ -1,29 +1,4 @@
 # List of required dependencies
-# Runtime
-click
-numpy
-matplotlib
-scipy
-scikit-learn
-pandas
-numexpr
-bottleneck
-plumbum
-inflection
-more_itertools
-memory_profiler
-psutil
-pyxdg
-frozendict
-requests
-sqlalchemy
-pymysql
--e /home/limyreth/doc/eclipse_workspace/chicken_turtle_util
-
-# Testing
-pytest
-pytest-benchmark
-pytest-timeout
-pytest-xdist
-freezegun>0.3.5
-networkx
+-e /home/limyreth/doc/eclipse_workspace/chicken_turtle_util[sqlalchemy,data_frame,series,algorithms]
+-e /home/limyreth/doc/eclipse_workspace/deep_genome_core
+recordclass
