--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,50 @@
-click==6.3
-numpy==1.10.4
-matplotlib==1.5.1
-scipy==0.17.0
-scikit-learn==0.17.1
-pandas==0.18.0
-numexpr==2.5
-bottleneck==1.0.0
-plumbum==1.6.1.post0
-inflection==0.3.1
-more-itertools==2.2
-memory-profiler==0.41
-psutil==4.1.0
-pyxdg==0.25
-frozendict==0.5
-Sphinx==1.4.5             # via sphinx-rtd-theme
-numpydoc==0.6.0
-sphinx-rtd-theme==0.1.9
-requests==2.9.1
-sqlalchemy==1.0.12
-pymysql==0.7.2
--e file:///home/limyreth/doc/eclipse_workspace/chicken_turtle_util
 pytest==2.9.0
 pytest-env==0.6.0
-pytest-benchmark==3.0.0
-pytest-timeout==1.0.0
 pytest-xdist==1.14
 pytest-cov==2.3.1
 coverage-pth==0.0.1
-freezegun==0.3.6
-networkx==1.11
+-e file:///home/limyreth/doc/eclipse_workspace/chicken_turtle_util
+-e file:///home/limyreth/doc/eclipse_workspace/deep_genome_core
+Sphinx==1.4.5             # via sphinx-rtd-theme
+numpydoc==0.6.0
+sphinx-rtd-theme==0.1.9
+recordclass==0.4.1
+pytest-mock==1.2
 alabaster==0.7.9          # via sphinx
 apipkg==1.4               # via execnet
 babel==2.3.4              # via sphinx
+bottleneck==1.0.0
+click==6.3
+collections-extended==0.8.0
 coverage==4.2             # via coverage-pth, pytest-cov
 cycler==0.10.0            # via matplotlib
-decorator==4.0.9          # via networkx
 docutils==0.12            # via sphinx
+drmaa==0.7.6
 execnet==1.4.1            # via pytest-xdist
+frozendict==0.5
 imagesize==0.7.1          # via sphinx
+inflection==0.3.1
 Jinja2==2.8               # via sphinx
 MarkupSafe==0.23          # via jinja2
+matplotlib==1.5.1
+memory-profiler==0.41
+more-itertools==2.2
+numexpr==2.5
+numpy==1.10.4             # via bottleneck, matplotlib, numexpr, pandas
+pandas==0.18.1
+plumbum==1.6.1.post0
+psutil==4.1.0
 py==1.4.31                # via pytest, pytest-xdist
 Pygments==2.1.3           # via sphinx
+pymysql==0.7.2
 pyparsing==2.1.0          # via matplotlib
-python-dateutil==2.5.0    # via freezegun, matplotlib, pandas
+python-dateutil==2.5.0    # via matplotlib, pandas
 pytz==2016.1              # via babel, matplotlib, pandas
-six==1.10.0               # via cycler, freezegun, python-dateutil, sphinx
+pyxdg==0.25
+requests==2.9.1
+scikit-learn==0.17.1
+scipy==0.17.0
+six==1.10.0               # via cycler, python-dateutil, sphinx
 snowballstemmer==1.2.1    # via sphinx
+sqlalchemy==1.0.12
+sqlparse==0.2.1
