Simplify design; use simple project structure; use varbio, pytil
- No longer use a database, simply parse the input and keep it all in
  memory. This simplifies code and installation at the cost of increased
  memory usage.

- No longer take into account gene synonyms (e.g. those of NCBI) and
  gene mappings (e.g. rice LOC <-> MSU id mapping). This greatly
  simplifies code, while these features were rarely needed. For input
  sets where synonyms or gene mappings do cause an issue, it is easy
  enough to replace all gene names in use with a canonical one, i.e. to
  ensure the input uses only one name per gene.

- Use simple project structure 1.1.1

- Rename deep_genome/coexpnetviz to coexpnetviz and remove all mention
  of Deep Genome. Abandoning the idea of having a suite named Deep
  Genome.

- Use varbio instead of deep_genome.core. It was renamed and simplified

- Use pytil instead of chicken_turtle_util. It was simply renamed

- Refactor all code:

  - Remove trailing whitespace
  - Remove unused imports
  - Squelch false-positive warnings

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,6 @@
-[pytest]
-addopts = --basetemp=last_test_runs --maxfail=1
-testpaths = deep_genome/coexpnetviz/tests
+[tool:pytest]
+testpaths = coexpnetviz/tests
 env = PYTHONHASHSEED=0
-
-[metadata]
-description-file = README.rst
-
+addopts = 
+	--basetemp=last_test_runs
+	--cov-config=.coveragerc
