Refactor: Move tests to repo root

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-testpaths = coexpnetviz/tests
+testpaths = tests
 markers =
     manual: tests which should be run manually so a human can verify the result
 filterwarnings =
