Refactor: Replace deprecated pytest --strict

--- a/pytest.ini
+++ b/pytest.ini
@@ -5,5 +5,4 @@ markers =
 addopts = 
     --tb=line
     -m 'not manual'
-    # Raise when using mark not defined above
-    --strict
+    --strict-markers
