--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -7,22 +7,24 @@ on:
 
 jobs:
   publish-conda-pkg:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v2
+    - uses: conda-incubator/setup-miniconda@v2
       with:
-        python-version: 3.8
-    - name: Add conda to system path
-      run: echo $CONDA/bin >> $GITHUB_PATH
+        miniconda-version: latest
+        auto-update-conda: true
+        python-version: 3.8.*
     - name: Install conda tools
+      shell: bash -l {0}
       run: conda install -y anaconda-client conda-build
     - name: Build conda pkg
+      shell: bash -l {0}
       run: |
         mkdir dist
         conda build . --channel anaconda --channel timdiels --output-folder dist
     - name: Publish to anaconda
+      shell: bash -l {0}
       run: anaconda upload --all dist/linux-64/*.tar.bz2
       env:
         ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_API_TOKEN }}
